--- a/Foursquare/Base.lproj/Main.storyboard
+++ b/Foursquare/Base.lproj/Main.storyboard
@@ -13,20 +13,24 @@
         <scene sceneID="VNJ-HQ-qiK">
             <objects>
                 <viewController id="sws-dd-Km6" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="p95-2r-Px1">
+                    <view key="view" contentMode="scaleToFill" id="p95-2r-Px1" customClass="LoginScreenBackground" customModule="Foursquare" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSZ-jK-yJj">
-                                <rect key="frame" x="166" y="87" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPw-S5-NYZ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Xxg-5c-SYe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mPw-S5-NYZ" firstAttribute="leading" secondItem="Xxg-5c-SYe" secondAttribute="leading" id="3fT-fF-BAG"/>
+                            <constraint firstItem="mPw-S5-NYZ" firstAttribute="width" secondItem="Xxg-5c-SYe" secondAttribute="width" id="6HL-KI-JCY"/>
+                            <constraint firstItem="Xxg-5c-SYe" firstAttribute="trailing" secondItem="mPw-S5-NYZ" secondAttribute="trailing" id="UlJ-58-P9O"/>
+                            <constraint firstItem="mPw-S5-NYZ" firstAttribute="height" secondItem="Xxg-5c-SYe" secondAttribute="height" id="hl7-aj-9iI"/>
+                            <constraint firstItem="mPw-S5-NYZ" firstAttribute="top" secondItem="Xxg-5c-SYe" secondAttribute="top" id="r5d-qq-Gkj"/>
+                            <constraint firstItem="Xxg-5c-SYe" firstAttribute="bottom" secondItem="mPw-S5-NYZ" secondAttribute="bottom" id="sBf-48-ZoH"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIE-Vj-lLX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -37,7 +41,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="SignUpController" customModule="Foursquare" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="BackgroundSettingsView" customModule="Foursquare" customModuleProvider="target">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="LoginScreenBackground" customModule="Foursquare" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -45,14 +49,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHv-xG-d9i">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="800.5"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Rbr-Zn-LJG">
-                                                <rect key="frame" x="77.5" y="70" width="220" height="36"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="220" id="Xo7-wa-Tr3"/>
-                                                </constraints>
-                                            </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0la-sc-8SK" customClass="AvenirBookFontWIthSize15" customModule="Foursquare" customModuleProvider="target">
                                                 <rect key="frame" x="167" y="161" width="41" height="20"/>
                                                 <constraints>
@@ -63,7 +61,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zFu-30-8wP" customClass="AvenirBookFontWithSize20" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="30" y="181" width="315" height="34"/>
+                                                <rect key="frame" x="30" y="181" width="315" height="41"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="315" id="Awt-OF-0ko"/>
                                                 </constraints>
@@ -71,7 +69,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bGN-rH-JOQ" customClass="AvenirBookFontWIthSize15" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="129" y="225" width="117" height="20"/>
+                                                <rect key="frame" x="129" y="232" width="117" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="C1X-QX-bOb"/>
                                                 </constraints>
@@ -80,7 +78,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LnK-GN-EYn" customClass="AvenirBookFontWithSize20" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="30" y="245" width="315" height="35"/>
+                                                <rect key="frame" x="30" y="252" width="315" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="315" id="xFB-Zv-0eU"/>
                                                 </constraints>
@@ -88,7 +86,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWS-Xx-4L7" customClass="AvenirBookFontWIthSize15" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="151" y="290" width="73.5" height="20"/>
+                                                <rect key="frame" x="151" y="304" width="73.5" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="dhr-AC-oNf"/>
                                                 </constraints>
@@ -97,7 +95,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Lw-xn-SCa" customClass="AvenirBookFontWithSize20" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="30" y="310" width="315" height="35"/>
+                                                <rect key="frame" x="30" y="324" width="315" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="315" id="a88-il-95x"/>
                                                 </constraints>
@@ -105,7 +103,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conform Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="78J-Tb-4IO" customClass="AvenirBookFontWIthSize15" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="115.5" y="355" width="144.5" height="20"/>
+                                                <rect key="frame" x="115.5" y="376" width="144.5" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="1Vi-3a-ZQ1"/>
                                                 </constraints>
@@ -114,7 +112,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wUf-d3-bv5" customClass="AvenirBookFontWithSize20" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="30" y="375" width="315" height="34"/>
+                                                <rect key="frame" x="30" y="396" width="315" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="315" id="cf7-UA-gOx"/>
                                                 </constraints>
@@ -122,26 +120,34 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VdI-v7-lNH" customClass="CustomLoginButton" customModule="Foursquare" customModuleProvider="target">
-                                                <rect key="frame" x="30" y="484" width="315" height="38"/>
+                                                <rect key="frame" x="30" y="505" width="315" height="38"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="315" id="FRs-ER-Tpv"/>
                                                     <constraint firstAttribute="height" constant="38" id="u5L-MV-8qJ"/>
                                                 </constraints>
                                                 <state key="normal" title="Login"/>
                                             </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Rbr-Zn-LJG">
+                                                <rect key="frame" x="55.5" y="70" width="264" height="36"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Rbr-Zn-LJG" secondAttribute="height" multiplier="22:3" id="zea-FY-mFY"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <constraints>
                                             <constraint firstItem="WWS-Xx-4L7" firstAttribute="top" secondItem="LnK-GN-EYn" secondAttribute="bottom" constant="10" id="0Hc-0e-ubu"/>
-                                            <constraint firstItem="0la-sc-8SK" firstAttribute="top" secondItem="Rbr-Zn-LJG" secondAttribute="bottom" constant="55" id="0zQ-PE-lTI"/>
+                                            <constraint firstItem="Rbr-Zn-LJG" firstAttribute="height" secondItem="zHv-xG-d9i" secondAttribute="height" multiplier="0.0449775" id="2Z2-B6-sNb"/>
                                             <constraint firstItem="LnK-GN-EYn" firstAttribute="top" secondItem="bGN-rH-JOQ" secondAttribute="bottom" id="4iC-lk-Ilu"/>
+                                            <constraint firstItem="Rbr-Zn-LJG" firstAttribute="top" secondItem="zHv-xG-d9i" secondAttribute="top" constant="70" id="4v4-cO-ZTR"/>
                                             <constraint firstItem="wUf-d3-bv5" firstAttribute="top" secondItem="78J-Tb-4IO" secondAttribute="bottom" id="6vh-mg-fzf"/>
                                             <constraint firstItem="7Lw-xn-SCa" firstAttribute="top" secondItem="WWS-Xx-4L7" secondAttribute="bottom" id="7A7-gJ-LNS"/>
                                             <constraint firstItem="0la-sc-8SK" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="BoD-CD-PaS"/>
+                                            <constraint firstItem="Rbr-Zn-LJG" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="DEO-hK-5NT"/>
                                             <constraint firstItem="zFu-30-8wP" firstAttribute="top" secondItem="0la-sc-8SK" secondAttribute="bottom" id="E4X-he-jSS"/>
                                             <constraint firstItem="bGN-rH-JOQ" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="Hyy-gA-jdJ"/>
                                             <constraint firstItem="VdI-v7-lNH" firstAttribute="top" secondItem="wUf-d3-bv5" secondAttribute="bottom" constant="75" id="IZf-UC-jYv"/>
                                             <constraint firstItem="wUf-d3-bv5" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="IfV-aC-MeB"/>
-                                            <constraint firstItem="Rbr-Zn-LJG" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="Mhv-iH-W3u"/>
+                                            <constraint firstItem="0la-sc-8SK" firstAttribute="top" secondItem="Rbr-Zn-LJG" secondAttribute="bottom" constant="55" id="MCI-Il-wmv"/>
                                             <constraint firstItem="VdI-v7-lNH" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="QxH-1Z-iIQ"/>
                                             <constraint firstItem="WWS-Xx-4L7" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="R1Y-rg-uJv"/>
                                             <constraint firstItem="7Lw-xn-SCa" firstAttribute="height" secondItem="zHv-xG-d9i" secondAttribute="height" multiplier="0.0524691" id="RVQ-WZ-QYP"/>
@@ -151,7 +157,6 @@
                                             <constraint firstItem="78J-Tb-4IO" firstAttribute="top" secondItem="7Lw-xn-SCa" secondAttribute="bottom" constant="10" id="eqv-NE-3ab"/>
                                             <constraint firstItem="7Lw-xn-SCa" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="fCs-Qm-yig"/>
                                             <constraint firstItem="bGN-rH-JOQ" firstAttribute="top" secondItem="zFu-30-8wP" secondAttribute="bottom" constant="10" id="heN-QY-v8o"/>
-                                            <constraint firstItem="Rbr-Zn-LJG" firstAttribute="top" secondItem="zHv-xG-d9i" secondAttribute="top" constant="70" id="qVQ-NN-dp2"/>
                                             <constraint firstItem="78J-Tb-4IO" firstAttribute="centerX" secondItem="zHv-xG-d9i" secondAttribute="centerX" id="xxM-zU-3cV"/>
                                             <constraint firstItem="LnK-GN-EYn" firstAttribute="height" secondItem="zHv-xG-d9i" secondAttribute="height" multiplier="0.0524691" id="y5I-Zb-mV2"/>
                                         </constraints>
