--- a/Foursquare/Base.lproj/Main.storyboard
+++ b/Foursquare/Base.lproj/Main.storyboard
@@ -126,6 +126,9 @@
                                                     <constraint firstAttribute="height" constant="38" id="u5L-MV-8qJ"/>
                                                 </constraints>
                                                 <state key="normal" title="Login"/>
+                                                <connections>
+                                                    <action selector="logIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Wr-WX-yMB"/>
+                                                </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Rbr-Zn-LJG">
                                                 <rect key="frame" x="55.5" y="70" width="264" height="36"/>
